fixed mobile spacing issues and added vendor prefixes;

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,57 +33,140 @@ a.button-collapse {
     height: 5.5em;
 }
 
-@keyframes bounce {
+@-webkit-keyframes bounce {
   0% {
-	transform:translate(0%, 0%) rotate(15deg);
+	-webkit-transform:translate(0%, 0%) rotate(15deg);
+	        transform:translate(0%, 0%) rotate(15deg);
 
 }
 5% {
-  	transform:translate(50%, 20%) rotate(30deg);
+  	-webkit-transform:translate(50%, 20%) rotate(30deg);
+  	        transform:translate(50%, 20%) rotate(30deg);
 
 }
 15% {
-    transform:translate(150%, 60%) rotate(45deg);
+    -webkit-transform:translate(150%, 60%) rotate(45deg);
+            transform:translate(150%, 60%) rotate(45deg);
     
 }
 30% {
-    transform:translate(300%, 120%) rotate(90deg);
+    -webkit-transform:translate(300%, 120%) rotate(90deg);
+            transform:translate(300%, 120%) rotate(90deg);
 }
 40% {
-  	transform:translate(400%, 160%) rotate(120deg);
+  	-webkit-transform:translate(400%, 160%) rotate(120deg);
+  	        transform:translate(400%, 160%) rotate(120deg);
     
 }
 50% {
-    transform:translate(500%, 200%) rotate(150deg);
+    -webkit-transform:translate(500%, 200%) rotate(150deg);
+            transform:translate(500%, 200%) rotate(150deg);
     
 }
 60% {
-    transform:translate(950%, 150%) rotate(180deg);
+    -webkit-transform:translate(950%, 150%) rotate(180deg);
+            transform:translate(950%, 150%) rotate(180deg);
     
 }
 70% {
-    transform:translate(1150%, 100%) rotate(210deg);
+    -webkit-transform:translate(1150%, 100%) rotate(210deg);
+            transform:translate(1150%, 100%) rotate(210deg);
     
 }
 80% {
-    transform:translate(1350%, 50%) rotate(240deg);
+    -webkit-transform:translate(1350%, 50%) rotate(240deg);
+            transform:translate(1350%, 50%) rotate(240deg);
 }
 90% {
-    transform:translate(1550%, 0%) rotate(270deg);
+    -webkit-transform:translate(1550%, 0%) rotate(270deg);
+            transform:translate(1550%, 0%) rotate(270deg);
     padding-bottom: 8px;
 }
 95% {
-    transform:translate(1650%, -25%) rotate(285deg);
+    -webkit-transform:translate(1650%, -25%) rotate(285deg);
+            transform:translate(1650%, -25%) rotate(285deg);
 }
 97% {
-    transform:translate(1675%, -37.5%) rotate(292deg);
+    -webkit-transform:translate(1675%, -37.5%) rotate(292deg);
+            transform:translate(1675%, -37.5%) rotate(292deg);
 
 }
 99% {
-    transform:translate(1725%, -48%) rotate(295deg);
+    -webkit-transform:translate(1725%, -48%) rotate(295deg);
+            transform:translate(1725%, -48%) rotate(295deg);
 }
 100% {
-    transform:translate(1750%, -50%) rotate(300deg);
+    -webkit-transform:translate(1750%, -50%) rotate(300deg);
+            transform:translate(1750%, -50%) rotate(300deg);
+ 
+}
+}
+
+@keyframes bounce {
+  0% {
+	-webkit-transform:translate(0%, 0%) rotate(15deg);
+	        transform:translate(0%, 0%) rotate(15deg);
+
+}
+5% {
+  	-webkit-transform:translate(50%, 20%) rotate(30deg);
+  	        transform:translate(50%, 20%) rotate(30deg);
+
+}
+15% {
+    -webkit-transform:translate(150%, 60%) rotate(45deg);
+            transform:translate(150%, 60%) rotate(45deg);
+    
+}
+30% {
+    -webkit-transform:translate(300%, 120%) rotate(90deg);
+            transform:translate(300%, 120%) rotate(90deg);
+}
+40% {
+  	-webkit-transform:translate(400%, 160%) rotate(120deg);
+  	        transform:translate(400%, 160%) rotate(120deg);
+    
+}
+50% {
+    -webkit-transform:translate(500%, 200%) rotate(150deg);
+            transform:translate(500%, 200%) rotate(150deg);
+    
+}
+60% {
+    -webkit-transform:translate(950%, 150%) rotate(180deg);
+            transform:translate(950%, 150%) rotate(180deg);
+    
+}
+70% {
+    -webkit-transform:translate(1150%, 100%) rotate(210deg);
+            transform:translate(1150%, 100%) rotate(210deg);
+    
+}
+80% {
+    -webkit-transform:translate(1350%, 50%) rotate(240deg);
+            transform:translate(1350%, 50%) rotate(240deg);
+}
+90% {
+    -webkit-transform:translate(1550%, 0%) rotate(270deg);
+            transform:translate(1550%, 0%) rotate(270deg);
+    padding-bottom: 8px;
+}
+95% {
+    -webkit-transform:translate(1650%, -25%) rotate(285deg);
+            transform:translate(1650%, -25%) rotate(285deg);
+}
+97% {
+    -webkit-transform:translate(1675%, -37.5%) rotate(292deg);
+            transform:translate(1675%, -37.5%) rotate(292deg);
+
+}
+99% {
+    -webkit-transform:translate(1725%, -48%) rotate(295deg);
+            transform:translate(1725%, -48%) rotate(295deg);
+}
+100% {
+    -webkit-transform:translate(1750%, -50%) rotate(300deg);
+            transform:translate(1750%, -50%) rotate(300deg);
  
 }
 }
@@ -101,6 +184,7 @@ h2 {
     position: relative;
     border-bottom: 3px solid $laker-gold;
     font-size:.5em;
+    top: 64px;
     top: 4rem;
 }
 nav {
@@ -112,7 +196,8 @@ nav {
 
 
 .bounce {
-   animation: bounce 1.05s;
+   -webkit-animation: bounce 1.05s;
+           animation: bounce 1.05s;
 
 }
 
@@ -147,9 +232,11 @@ section {
     padding: .5em;
 } 
 #message-field {
+    margin-top: 48px;
     margin-top: 3rem;
 }
 #message-label {
+    top: -32px;
     top: -2rem;
 }
 .laker-btn {
@@ -188,6 +275,7 @@ nav {
 #sidenav-overlay {
     background-color:rgba(0,0,0,0.0);
     opacity: 0 !important;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     visibility: hidden;
 }
 #nav-mobile {
@@ -248,6 +336,9 @@ nav i.material-icons {
     text-align: center;
     font-weight: 900;
 }
+.coach-pic {
+margin-left:20%;
+}
 ul li img {
     height:100%;
     width:100%;
@@ -274,7 +365,9 @@ span.testimony-position {
 @media only screen 
 and (min-width : 321px) {
     /* Styles */
- 
+ .coach-pic {
+margin-left:30%;
+}
 }
 
 /* Smartphones (portrait) ----------- */
